# system-failure-analysis

./: .gitignore  README.md  main.py  pyproject.toml
loglens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
logs/: cloud_failure_log.clf  cloud_failure_log.elf  cloud_failure_log.json  cloud_failure_log.xml  cloud_failure_log.yaml
modules/: charts.py  downtime_calculator.py  error_analysis.py  log_input.py  pdf_report_generator.py  report_generator.py  root_cause_analysis.py
output/reports/: system_failure_report.txt
output_cli_test/reports/: system_failure_report.txt
packaging/: build_windows_exe.ps1  install_linux.sh  install_windows.ps1  loglens.spec
